--- a/overwolf-ltcrabbit/src/main/public/index.html
+++ b/overwolf-ltcrabbit/src/main/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Monitor</title>
   	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
